gen/Multi_Core_GrammarParser.py
# Generated from /home/asa/Code/Git/Multi-core_DLS/Multi_Core_Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Multi_Core_GrammarParser ( Parser ):

    grammarFileName = "Multi_Core_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'threads_number:'", "'for'", "'in'", 
                     "'range'", "':'", "'('", "')'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'.'", "'\\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "FOR", "IN", "RANGE", "COLON", 
                      "LPAREN", "RPAREN", "COMMA", "BOOLEAN", "INTEGER", 
                      "IDENTIFIER", "DOT", "INDENT", "WS", "NEWLINE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_threadsNumber = 2
    RULE_threadST = 3
    RULE_time = 4
    RULE_code = 5
    RULE_forLoop = 6
    RULE_variable = 7
    RULE_iterable = 8
    RULE_range = 9
    RULE_from = 10
    RULE_to = 11
    RULE_threads_no = 12
    RULE_bool = 13
    RULE_otherCode = 14

    ruleNames =  [ "start", "program", "threadsNumber", "threadST", "time", 
                   "code", "forLoop", "variable", "iterable", "range", "from", 
                   "to", "threads_no", "bool", "otherCode" ]

    EOF = Token.EOF
    T__0=1
    FOR=2
    IN=3
    RANGE=4
    COLON=5
    LPAREN=6
    RPAREN=7
    COMMA=8
    BOOLEAN=9
    INTEGER=10
    IDENTIFIER=11
    DOT=12
    INDENT=13
    WS=14
    NEWLINE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(Multi_Core_GrammarParser.EOF, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = Multi_Core_GrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.program()
            self.state = 31
            self.match(Multi_Core_GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def threadsNumber(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.ThreadsNumberContext,0)


        def time(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.TimeContext,0)


        def code(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.CodeContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Multi_Core_GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.threadsNumber()
            self.state = 34
            self.time()
            self.state = 35
            self.code()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThreadsNumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def threadST(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.ThreadSTContext,0)


        def threads_no(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.Threads_noContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_threadsNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThreadsNumber" ):
                listener.enterThreadsNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThreadsNumber" ):
                listener.exitThreadsNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThreadsNumber" ):
                return visitor.visitThreadsNumber(self)
            else:
                return visitor.visitChildren(self)




    def threadsNumber(self):

        localctx = Multi_Core_GrammarParser.ThreadsNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_threadsNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.threadST()
            self.state = 38
            self.threads_no()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThreadSTContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_threadST

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThreadST" ):
                listener.enterThreadST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThreadST" ):
                listener.exitThreadST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThreadST" ):
                return visitor.visitThreadST(self)
            else:
                return visitor.visitChildren(self)




    def threadST(self):

        localctx = Multi_Core_GrammarParser.ThreadSTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_threadST)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(Multi_Core_GrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.BoolContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_time

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime" ):
                listener.enterTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime" ):
                listener.exitTime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTime" ):
                return visitor.visitTime(self)
            else:
                return visitor.visitChildren(self)




    def time(self):

        localctx = Multi_Core_GrammarParser.TimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_time)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.bool_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forLoop(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.ForLoopContext,0)


        def otherCode(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.OtherCodeContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = Multi_Core_GrammarParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_code)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.forLoop()


                pass

            elif la_ == 2:
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 47
                    self.otherCode()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(Multi_Core_GrammarParser.FOR, 0)

        def variable(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.VariableContext,0)


        def IN(self):
            return self.getToken(Multi_Core_GrammarParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.IterableContext,0)


        def COLON(self):
            return self.getToken(Multi_Core_GrammarParser.COLON, 0)

        def code(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.CodeContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = Multi_Core_GrammarParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(Multi_Core_GrammarParser.FOR)
            self.state = 53
            self.variable()
            self.state = 54
            self.match(Multi_Core_GrammarParser.IN)
            self.state = 55
            self.iterable()
            self.state = 56
            self.match(Multi_Core_GrammarParser.COLON)
            self.state = 57
            self.code()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Multi_Core_GrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = Multi_Core_GrammarParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(Multi_Core_GrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Multi_Core_GrammarParser.IDENTIFIER, 0)

        def range_(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.RangeContext,0)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterable" ):
                return visitor.visitIterable(self)
            else:
                return visitor.visitChildren(self)




    def iterable(self):

        localctx = Multi_Core_GrammarParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_iterable)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(Multi_Core_GrammarParser.IDENTIFIER)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.range_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RANGE(self):
            return self.getToken(Multi_Core_GrammarParser.RANGE, 0)

        def LPAREN(self):
            return self.getToken(Multi_Core_GrammarParser.LPAREN, 0)

        def to(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.ToContext,0)


        def RPAREN(self):
            return self.getToken(Multi_Core_GrammarParser.RPAREN, 0)

        def from_(self):
            return self.getTypedRuleContext(Multi_Core_GrammarParser.FromContext,0)


        def COMMA(self):
            return self.getToken(Multi_Core_GrammarParser.COMMA, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRange" ):
                return visitor.visitRange(self)
            else:
                return visitor.visitChildren(self)




    def range_(self):

        localctx = Multi_Core_GrammarParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(Multi_Core_GrammarParser.RANGE)
            self.state = 66
            self.match(Multi_Core_GrammarParser.LPAREN)
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 67
                self.from_()
                self.state = 68
                self.match(Multi_Core_GrammarParser.COMMA)


            self.state = 72
            self.to()
            self.state = 73
            self.match(Multi_Core_GrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(Multi_Core_GrammarParser.INTEGER, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_from

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom" ):
                listener.enterFrom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom" ):
                listener.exitFrom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom" ):
                return visitor.visitFrom(self)
            else:
                return visitor.visitChildren(self)




    def from_(self):

        localctx = Multi_Core_GrammarParser.FromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_from)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(Multi_Core_GrammarParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(Multi_Core_GrammarParser.INTEGER, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_to

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo" ):
                listener.enterTo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo" ):
                listener.exitTo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTo" ):
                return visitor.visitTo(self)
            else:
                return visitor.visitChildren(self)




    def to(self):

        localctx = Multi_Core_GrammarParser.ToContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_to)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(Multi_Core_GrammarParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Threads_noContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(Multi_Core_GrammarParser.INTEGER, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_threads_no

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThreads_no" ):
                listener.enterThreads_no(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThreads_no" ):
                listener.exitThreads_no(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThreads_no" ):
                return visitor.visitThreads_no(self)
            else:
                return visitor.visitChildren(self)




    def threads_no(self):

        localctx = Multi_Core_GrammarParser.Threads_noContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_threads_no)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(Multi_Core_GrammarParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(Multi_Core_GrammarParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)




    def bool_(self):

        localctx = Multi_Core_GrammarParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(Multi_Core_GrammarParser.BOOLEAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forLoop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Multi_Core_GrammarParser.ForLoopContext)
            else:
                return self.getTypedRuleContext(Multi_Core_GrammarParser.ForLoopContext,i)


        def getRuleIndex(self):
            return Multi_Core_GrammarParser.RULE_otherCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOtherCode" ):
                listener.enterOtherCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOtherCode" ):
                listener.exitOtherCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOtherCode" ):
                return visitor.visitOtherCode(self)
            else:
                return visitor.visitChildren(self)




    def otherCode(self):

        localctx = Multi_Core_GrammarParser.OtherCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_otherCode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 85
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        self.state = 83
                        self.forLoop()
                        pass

                    elif la_ == 2:
                        self.state = 84
                        self.matchWildcard()
                        pass

             
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





